forth PWA commit

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>genomify app</title>
-  <link rel="canonical" href="https://codepo8.github.io/github-page-pwa/" />
-  <link rel="manifest" href="/github-page-pwa/manifest.webmanifest">
+  <link rel="canonical" href="https://nimaa1.github.io/genomifyHello/" />
+  <link rel="manifest" href="/genomifyHello/manifest.webmanifest">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
